--- a/source/layouts/layout.erb
+++ b/source/layouts/layout.erb
@@ -45,8 +45,8 @@
 
           <ul class="nav navbar-nav navbar-right">
             <li>
-              <% link_to "/pricing.html" do %>
-                <i class="fa fa-dollar"></i> Pricing
+              <% link_to "/team.html" do %>
+                <i class="fa fa-users"></i> Team
               <% end %>
             </li>
             <li>
@@ -68,5 +68,28 @@
     </nav>
 
     <%= yield %>
+
+    <div id="footer">
+      
+      <div class="container">
+        <div class="row">
+          <div class="col-xs-4">
+            <ul class="list-inline">
+              <li><a href="#"><i class="fa fa-facebook"></i></a></li>
+              <li><a href="#"><i class="fa fa-twitter"></i></a></li>
+              <li><a href="#"><i class="fa fa-linkedin"></i></a></li>
+              <li><a href="#"><i class="fa fa-github"></i></a></li>
+            </ul>
+          </div>
+          <div class="col-xs-8 text-right">
+            <p>
+              Stylus is a fictive product by LeWagon
+            </p>
+          </div>
+        </div>
+      </div>
+
+    </div>
+
   </body>
 </html>
