--- a/source/stylesheets/config/_bootstrap_variables.css.scss
+++ b/source/stylesheets/config/_bootstrap_variables.css.scss
@@ -9,6 +9,7 @@ $body-bg:                 lighten(#000, 93.5%);
 $font-size-base:          $base-size;
 $line-height-base:        $base-height;
 $headings-font-family:    $header-font;
+$headings-font-weight: 	  $base-weight-headings;
 
 // Semantic color scheme
 $brand-primary:   $blue;
