--- a/source/stylesheets/layout/_footer.css.scss
+++ b/source/stylesheets/layout/_footer.css.scss
@@ -1,1 +1,16 @@
-// Your footer style
+#footer {
+	background: $gray-darker;
+	color: $gray-lighter;
+	padding: 50px 20px;
+
+	a {
+		font-size: 20px;
+		color: $gray-lighter;
+		transition: color 0.3s ease;
+
+		&:hover {
+			font-size: 20px;
+			color: $pumpkin;
+		}
+	}
+}
