--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -2,7 +2,7 @@
 title: Welcome to Stylus
 ---
 
-<div id="banner">
+    <div id="banner">
       
       <div class="container">
           <div class="row">
@@ -65,6 +65,24 @@ title: Welcome to Stylus
         <input class="form-control" type="email" placeholder="example@gmail.com">
         <input class="btn btn-success" type="submit" value="Subscribe">
       </form>
+
+    </div>
+
+    <div id="testimonials">
+        
+        <div class="container text-center">
+            <diw class="row">
+                <% data.testimonials.each do |testimonial| %>
+                    <div class="col-xs-12 col-sm-6">
+                        <div class="testimonials">
+                        <%= image_tag testimonial.image_file, class:"img-circle" %>
+                        <h3><%= testimonial.name %></h3>
+                        <p><%= testimonial.content %></p>
+                        </div>
+                    </div>
+                <% end %>
+            </diw>
+        </div>
 
     </div>
 
