add products page
new page with new yml database

--- a/source/layouts/layout.erb
+++ b/source/layouts/layout.erb
@@ -45,8 +45,8 @@
 
           <ul class="nav navbar-nav navbar-right">
             <li>
-              <% link_to "/team.html" do %>
-                <i class="fa fa-users"></i> Team
+              <% link_to "/pricing.html" do %>
+                <i class="fa fa-shopping-basket"></i> Products
               <% end %>
             </li>
             <li>
