--- a/source/team.html.erb
+++ b/source/team.html.erb
@@ -2,7 +2,7 @@
 title: Meet our team
 ---
 
-<div class="text-center padded">
+<div class="text-center">
 	<h1>Our team</h1>
 	<ul class="list-inline">
 		<li>
